--- a/static/index.html
+++ b/static/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>TensorFlow.js: Tuberculosis Detector</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Use the power of Machine Learning to diagnose TB from chest x-rays.">
+		<title>Обнаружение туберкулеза</title>
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -32,22 +30,19 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-			<a class="navbar-brand" href="/index.html">Tuberculosis Detector</a>
+			<a class="navbar-brand" href="/index.html">Проверка наличия туберкулеза</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarCollapse">
 				<ul class="navbar-nav mr-auto">
-				<li class="nav-item">
-					<a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
-				</li>
 			</div>
 		</nav>
 		
 		<main role="main" class="container mt-5">
 			<div class="row">
 				<div class="col-12">
-					<div class="progress progress-bar progress-bar-striped progress-bar-animated mb-2">Loading Model</div>
+					<div class="progress progress-bar progress-bar-striped progress-bar-animated mb-2">Загрузка модели</div>
 				</div>
 			</div>
 			<div class="row">
@@ -55,17 +50,17 @@
 					<input id="image-selector" class="form-control border-0" type="file">
 				</div>
 				<div class="col-6">
-					<button id="predict-button" class="btn btn-primary float-right">Predict</button>
+					<button id="predict-button" class="btn btn-primary float-right">Предсказать</button>
 				</div>
 			</div>
 			<hr>
 			<div class="row">
 				<div class="col-6">
-					<h2 class="ml-3">Image</h2>
+					<h2 class="ml-3">Изображение</h2>
 					<img id="selected-image" class="ml-3" width="250" alt=""> 
 				</div>
 				<div class="col-6">
-					<h2 class="ml-3">Predictions</h2>
+					<h2 class="ml-3">Предсказания</h2>
 					<ol id="prediction-list"></ol>
 				</div>
 			</div>
@@ -77,6 +72,6 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
 		<script src="target_classes.js"></script>
-		<script src="predict.js"></script > 
+		<script src="predict.js"></script> 
 	</body>
 </html>
